--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "antd": "^5.21.6",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.11",
+    "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
