--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "antd": "^5.21.6",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.11",
