--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = service_zfm4l5i
-VITE_EMAIL_TEMPLATE_ID = template_ezxkywa
-VITE_EMAIL_PRIVATE_KEY = B7o9R5m6iF1syfp3WEdvc
-VITE_EMAIL_PUBLIC_KEY = RA6uafdlBsoCbjoEM
+VITE_EMAIL_SERVICE_ID = service_1sxn0j6
+VITE_EMAIL_TEMPLATE_ID = template_xmvotgq
+VITE_EMAIL_PRIVATE_KEY = eJORNxU973zNV_0IRsbqc
+VITE_EMAIL_PUBLIC_KEY = 9OtUDHnSULU1BGEm5
