--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = service_1sxn0j6
-VITE_EMAIL_TEMPLATE_ID = template_xmvotgq
-VITE_EMAIL_PRIVATE_KEY = eJORNxU973zNV_0IRsbqc
-VITE_EMAIL_PUBLIC_KEY = 9OtUDHnSULU1BGEm5
+VITE_EMAIL_SERVICE_ID = service_d6uv18k
+VITE_EMAIL_TEMPLATE_ID = template_u89fhpo
+VITE_EMAIL_PRIVATE_KEY = HkOVC5vQ5JkhxF6r1l_2d
+VITE_EMAIL_PUBLIC_KEY = RrmjK6B3q4skQY1uc
