--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = service_d6uv18k
-VITE_EMAIL_TEMPLATE_ID = template_u89fhpo
-VITE_EMAIL_PRIVATE_KEY = HkOVC5vQ5JkhxF6r1l_2d
-VITE_EMAIL_PUBLIC_KEY = RrmjK6B3q4skQY1uc
+VITE_EMAIL_SERVICE_ID = service_zfm4l5i
+VITE_EMAIL_TEMPLATE_ID = template_ezxkywa
+VITE_EMAIL_PRIVATE_KEY = B7o9R5m6iF1syfp3WEdvc
+VITE_EMAIL_PUBLIC_KEY =RA6uafdlBsoCbjoEM
