--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = service_zfm4l5i
+VITE_EMAIL_SERVICE_ID = hehehehehe
 VITE_EMAIL_TEMPLATE_ID = template_ezxkywa
-VITE_EMAIL_PRIVATE_KEY = B7o9R5m6iF1syfp3WEdvc
+VITE_EMAIL_PRIVATE_KEY = hello_sucker
 VITE_EMAIL_PUBLIC_KEY =RA6uafdlBsoCbjoEM
