--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = hehehehehe
-VITE_EMAIL_TEMPLATE_ID = template_ezxkywa
-VITE_EMAIL_PRIVATE_KEY = hello_sucker
-VITE_EMAIL_PUBLIC_KEY =RA6uafdlBsoCbjoEM
+VITE_EMAIL_SERVICE_ID = service_kfsknns
+VITE_EMAIL_TEMPLATE_ID = template_98nmfdu
+VITE_EMAIL_PRIVATE_KEY = MscDNK-_klrlUBjRLNcMS
+VITE_EMAIL_PUBLIC_KEY = X_abD_xe7yNzNEg8Y
