--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAIL_SERVICE_ID = service_kfsknns
-VITE_EMAIL_TEMPLATE_ID = template_98nmfdu
-VITE_EMAIL_PRIVATE_KEY = MscDNK-_klrlUBjRLNcMS
-VITE_EMAIL_PUBLIC_KEY = X_abD_xe7yNzNEg8Y
+VITE_EMAIL_SERVICE_ID = service_co7ewsz
+VITE_EMAIL_TEMPLATE_ID = template_tceo4sc
+VITE_EMAIL_PRIVATE_KEY = 8UMfji0IPO2QRXxWWBuaB
+VITE_EMAIL_PUBLIC_KEY = BRNv9quX_ShPgf5_A
