--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "antd": "^5.21.6",
     "aos": "^2.3.4",
+    "axios": "^1.13.2",
     "framer-motion": "^11.11.11",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
